2013-02-10  Julien Bect  <julien.bect@supelec.fr>

	Fix and improve stk_datastruct().

	* utils/stk_datastruct.m: Call inputname correctly, with an input
	argument. Return an empty data structure when nargin == 0. Add
	some tests.

2013-02-04  Julien Bect  <julien.bect@supelec.fr>

	Implement the NOLHS construction of Cioppa & Luca (2007).

	* sampling/stk_sampling_olhs.m: The function now has an additional
	hidden option to trigger the construction of an extended (N)OLHS
	following the paper by Cioppa & Lucs (Technometrics, 2007).

	Fixed a bug in stk_rescale() and added regression tests.

	* utils/stk_rescale.m: Fixed a bug in the first part of the
	function (i.e., the part where the data is scaled from its
	original box to [0; 1]^d). Added some regression tests.

2013-01-21  Julien Bect  <julien.bect@supelec.fr>

	Modified stk_set_root() to avoid the use of a persistent variable.

	* misc/config/stk_set_root.m: modified. The use of a persistent	variable
	was failing to play its intended role when switching from one version of
	STK to another. The root folder is now detected using which('stk_test').

2013-01-20  Julien Bect  <julien.bect@supelec.fr>

	Fixed a test in stk_filldist().

	* misc/dist/stk_filldist.m: modified test. Added a tolerance in a
	comparison; otherwise the test was failing from time to time
	because of numerical errors.

2013-01-19  Julien Bect  <julien.bect@supelec.fr>

	Added a DoE example (sequential space-filling).

	* examples/02_design_of_experiments/stk_example_doe02.m: new
	script.

	Fixed a numerical issue in stk_filldist_exact().

	* misc/dist/stk_filldist_exact.m: modified. Because of possible
	numerical inaccuracies, centers that are slightly outside the box
	must also be considered as candidates for being ymax.

	Fixed a bug in stk_filldist().

	* misc/dist/stk_filldist.m: modified. Fixed a bug in the
	discretized case (the second output argument was the index of ymax
	instead of ymax itself, as advertised by the documentation).
