@@ -1,3 +1,11 @@
+2013-02-26  Julien Bect  <julien.bect@supelec.fr>
+
+	Prepare stk_param_estim for parameter objects (instead of vectors).
+
+	* paramestim/stk_param_estim.m: Prepare for parameter objects. Rename
+  	  the optimized vector for 'param' to 'u' for clarity (since it is
+	  sometimes an extended parameter vector).
+
 2013-02-10  Julien Bect  <julien.bect@supelec.fr>
 
 	Fix and improve stk_datastruct().
